--- a/app/globals.css
+++ b/app/globals.css
@@ -50,20 +50,13 @@ body {
   font-size: 1.5vw;
 }
 
-.project-box{
-  border: 1px solid black;
-  margin: 10px;
-  width: 50vh;
-  height: 50vh;
-}
-
 .projects-button{
   background-color: transparent;
   color: var(--main-color);
   border: 2px solid var(--main-color);
 }
 
-.project{
+.project-image{
   background-color: var(--main-color);
 }
 
