--- a/app/globals.css
+++ b/app/globals.css
@@ -125,8 +125,22 @@ body {
     font-size: 1.5rem;
   }
 
+  .about-div{
+    flex-direction: column;
+  }
+
+  .about-box{
+    width: 90%;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+
   .project{
     width: 90%;
+  }
+
+  .tech-image{
+    width: 20%;
   }
 
 }
