--- a/app/globals.css
+++ b/app/globals.css
@@ -44,6 +44,12 @@ body {
 
 .title-text{
   font-size: 1.5vw;
+  padding: .75vw 0px;
+}
+
+.name-text{
+  font-size: 2.5vw;
+  padding: .75vw 0px;
 }
 
 .projects-button{
@@ -100,6 +106,28 @@ body {
     justify-content: center;
     align-items: center;
   }
+
+  .tech-image{
+    width: 18%;
+  }
+
+  .landing-container{
+    width: 90%;
+  }
+
+  .projects-button{
+    font-size: 13px;
+  }
+
+  .about-div{
+    flex-direction: column;
+  }
+
+  .about-box{
+    width: 70%;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
 }
 
 @media(max-width: 767px){
@@ -118,11 +146,12 @@ body {
   }
 
   .name-text{
-    font-size: 2rem;
+    font-size: 3rem;
   }
 
   .title-text{
     font-size: 1.5rem;
+    margin-bottom: 25px;
   }
 
   .about-div{
@@ -139,8 +168,16 @@ body {
     width: 90%;
   }
 
+  .projects-button{
+    font-size: 20px;
+  }
+
   .tech-image{
-    width: 20%;
+    width: 10vw;
+  }
+
+  .tech-row{
+    justify-content: space-between;
   }
 
 }
