--- a/app/globals.css
+++ b/app/globals.css
@@ -94,6 +94,11 @@ body {
   cursor: pointer;
 }
 
+#about{
+  background-color: #837cfc;
+  color: white;
+}
+
 @media(max-width: 1000px){
   .project-image, .project-desc{
     width: 85%;
