added names of tech icons to the skills section

--- a/app/globals.css
+++ b/app/globals.css
@@ -160,6 +160,10 @@ body {
     flex-direction: column;
   }
 
+  .skill-desc{
+    width: 85%;
+  }
+
   .about-box{
     width: 90%;
     text-align: center;
