fixed the styling for skills page and fixed an error with placement of text description for skills

--- a/app/globals.css
+++ b/app/globals.css
@@ -94,6 +94,10 @@ body {
   cursor: pointer;
 }
 
+.tech-anchor{
+  height: 30%;
+}
+
 @media(max-width: 1000px){
   .project-image, .project-desc{
     width: 85%;
