--- a/app/globals.css
+++ b/app/globals.css
@@ -99,6 +99,13 @@ body {
   color: grey
 }
 
+.tech-image{
+  width: 50px;
+  height: 50px;
+  object-fit: contain;
+  object-position: center center;
+}
+
 @media(max-width: 1000px){
   .project-image, .project-desc{
     width: 85%;
@@ -134,6 +141,22 @@ body {
     width: 70%;
     text-align: center;
     margin-bottom: 1rem;
+  }
+
+  .about-text{
+    width: 85%;
+    margin: 0px auto;
+  }
+
+  .contact-box{
+    width: 100%;
+    padding-left: 1rem;
+  }
+
+  .contact-title{
+    width: 100%;
+    padding-top: 3rem;
+    padding-left: 0px;
   }
 }
 
@@ -189,6 +212,7 @@ body {
 
   .tech-row{
     justify-content: space-between;
+    padding: 0px 10%;
   }
 
   .tech-title{
