updated styling for tech images and loads all websites that spin down on load

--- a/app/globals.css
+++ b/app/globals.css
@@ -121,8 +121,12 @@ body {
     align-items: center;
   }
 
-  .tech-image{
-    width: 18%;
+  .tech-title{
+    text-align: center;
+  }
+
+  .skill-desc{
+    width: 75%;
   }
 
   .landing-container{
@@ -221,6 +225,13 @@ body {
   }
 
 }
+
+@media(max-width: 1300px){
+  .tech-row{
+    padding: 0px 10%;
+  }
+}
+
 
 @media (min-width: 1921px) {
   .name-text{
