fixed href for the about link in the header and updated responsiveness for contact section

--- a/app/globals.css
+++ b/app/globals.css
@@ -162,6 +162,10 @@ body {
     margin: 0px auto;
   }
 
+  .about-info{
+    padding: 0px;
+  }
+
   .contact-box{
     width: 100%;
     padding-left: 1rem;
